--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,15 @@ dependencies {
     testCompile(
             'junit:junit:4.12',
             'org.mockito:mockito-core:3.2.4',
-            'org.springframework:spring-test:4.0.0.RELEASE',
+            'org.springframework:spring-test:4.3.16.RELEASE',
             'com.github.stefanbirkner:system-rules:1.19.0'
     )
     compile(
-            'org.springframework:spring-context:4.0.0.RELEASE',
-            'org.springframework:spring-core:4.0.0.RELEASE',
-            'org.springframework:spring-test:4.0.0.RELEASE'
-    )
+            'org.springframework:spring-context:4.3.16.RELEASE',
+            'org.springframework:spring-core:4.3.16.RELEASE',
+            'org.springframework:spring-test:4.3.16.RELEASE',
+            'org.springframework:spring-jdbc:4.3.16.RELEASE',
+            'com.alibaba.spring:spring-context-support:1.0.5',
+            'org.javassist:javassist:3.20.0-GA'
+            )
 }
